# dogma-vdb

./: .gitignore  AGENTS.md  ARCH-SPEC.md  BENCHMARK.md  Cargo.toml  LICENSE-MIT  RCA_GUIDE.md  README.md  SPEC.md  audit-1-fix-report.md  audit-1-temp.md  audit-2-ivf-pq-report.md  bench_results.json  benchmarks_comparison.md  deny.toml  rust-toolchain.toml  test_sequential.sh
.cargo/: audit.toml
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-16_210000-hnsw-heuristic.md  2026-05-17_145000-fix-hnsw-sq-recall.md  2026-05-17_150000-ivf-pq-index.md  2026-05-17_160000-vector-storage-abstraction.md
bench-project/: bench.py
benches/: benchmarks.rs
benchmarks/: BENCHMARK.md  Cargo.toml  TUNING_REPORT.md  bench_results.json
benchmarks/src/: hermes_bench.rs  main.rs  real_emb_bench.rs
docs/: FEATURES.md  FUTURE_FEATURES.md
docs/plans/: 2026-06-05-dogma-improvement-plan.md
dogma-vdb-cli/: Cargo.toml
dogma-vdb-cli/src/: main.rs
dogma-vdb-cli/src/rag/: ingest.rs  mod.rs  query.rs  watch.rs
dogma-vdb-embed/: Cargo.toml
dogma-vdb-embed-fastembed/: Cargo.toml
dogma-vdb-embed-fastembed/src/: lib.rs
dogma-vdb-embed/src/: lib.rs
dogma-vdb-mcp/: Cargo.toml
dogma-vdb-mcp/src/: main.rs  rerank_adapter.rs
dogma-vdb-python/: Cargo.toml  pyproject.toml
dogma-vdb-python/python/dogma_vdb/: __init__.py
dogma-vdb-python/src/: lib.rs
dogma-vdb-rag/: Cargo.toml
dogma-vdb-rag/src/: ingest.rs  main.rs  query.rs  watch.rs
dogma-vdb-rag/tests/: integration.rs
dogma-vdb-rerank/: Cargo.toml
dogma-vdb-rerank/src/: lib.rs  onnx.rs
examples/: basic.rs  bench.rs  bench100k.rs  bench_grid.rs  bench_hermes.rs  langchain_mcp.py  test_bf.rs  test_chunk.rs  test_chunker_seq.rs  test_cli.rs  test_ingest.rs  test_ingest2.rs  test_sequential.rs
scripts/: dogfood.sh
src/: chunker.rs  collection.rs  config.rs  distance.rs  doc.rs  embedding.rs  error.rs  filter.rs  index.rs  lib.rs  mcp.rs  memory.rs  rerank.rs  storage.rs  watch.rs
src/index/: annoy.rs  bm25.rs  brute_force.rs  hnsw.rs  ivf_pq.rs  ivf_pq_persistence.rs  kmeans.rs  mod.rs  rrf.rs  sq.rs
src/index/ivf_pq/: insert.rs  mod.rs  search.rs  tests.rs
src/smart_chunker/: code.rs  fixed_window.rs  jsonl.rs  markdown.rs  mod.rs  paragraph.rs  semantic.rs  syntax.rs
src/sml/: ast.rs  compiler.rs  infer.rs  keywords.rs  mod.rs  serializer.rs
src/storage/: mod.rs  traits.rs
tests/: integration.rs
