[package]
name = "dogma-vdb"
version = "0.1.0"
description = "Portable vector database in JSONL format. Rustic, zero-cost, MCP-ready."
edition = "2021"
rust-version = "1.75"
authors = ["dogma-vdb"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dogma-ai/dogma-vdb"
keywords = ["vector", "database", "rag", "embeddings", "jsonl"]
categories = ["database", "science", "wasm"]

[features]
default = []
watch = ["dep:notify", "dep:crossbeam-channel"]
mcp = ["dep:rmcp", "dep:tokio", "dep:tracing", "dep:clap"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"

# Watcher (opcional)
notify              = { version = "7", optional = true }
crossbeam-channel   = { version = "0.5", optional = true }

# MCP server (opcional)
rmcp                = { version = "0.7", optional = true }
tokio               = { version = "1", features = ["full"], optional = true }
tracing             = { version = "0.1", optional = true }
clap                = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
# Testing
tempfile    = "3"
criterion   = { version = "0.5", features = ["html_reports"] }

# Linting
# Clippy ya viene con Rust — esto configura deny.toml y pre-commit

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
