[package]
name = "dogma-vdb"
version = "0.1.0"
description = "Portable vector database in JSONL format. Rustic, zero-cost, MCP-ready."
edition = "2021"
rust-version = "1.75"
authors = ["dogma-vdb"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dogma-ai/dogma-vdb"
keywords = ["vector", "database", "rag", "embeddings", "jsonl"]
categories = ["database", "science", "wasm"]

[features]
default = []
watch = ["dep:notify", "dep:crossbeam-channel"]
mcp = ["dep:rmcp", "dep:tokio", "dep:tracing", "dep:clap"]

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"

# Smart chunker (regex-based file-type detection)
regex-lite   = "0.1"

# Parallel iteration
rayon        = "1"

# SIMD-accelerated dot product / distance
wide         = "1"

# Safe f32↔[u8] reinterpret (needed by binary storage)
bytemuck     = "1"

# Zero-copy memory-mapped file I/O (used by MmapBackedStorage)
memmap2      = "0.9"

# Runtime config (toml + env vars)
once_cell    = "1.20"
toml         = "0.8"
log          = "0.4"

# Watcher (opcional)
notify              = { version = "8", features = ["crossbeam-channel"], optional = true }
crossbeam-channel   = { version = "0.5", optional = true }

# MCP server (opcional)
rmcp                = { version = "1", optional = true }
tokio               = { version = "1", features = ["full"], optional = true }
tracing             = { version = "0.1", optional = true }
clap                = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile    = "3"
criterion   = { version = "0.5", features = ["html_reports"] }
anyhow      = "1"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace]
members = [
    ".",
    "dogma-vdb-cli",
    "dogma-vdb-mcp",
    "dogma-vdb-embed",
    "dogma-vdb-embed-fastembed",
    "dogma-vdb-rerank",
]
