[package]
name = "dogma-vdb-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
dogma-vdb = { path = ".." }
dogma-vdb-embed = { path = "../dogma-vdb-embed" }
dogma-vdb-embed-fastembed = { path = "../dogma-vdb-embed-fastembed" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
chunker-syntax = ["dogma-vdb/chunker-syntax"]

[[bin]]
name = "hermes-bench"
path = "src/hermes_bench.rs"

[[bin]]
name = "real-emb-bench"
path = "src/real_emb_bench.rs"
