[package]
name = "dogma-vdb-cli"
version = "0.1.0"
description = "CLI for dogma-vdb: query, ingest, delete, and inspect .vdb collections."
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[features]
default = []
rag = [
    "dep:dogma-vdb-embed",
    "dep:dogma-vdb-embed-fastembed",
    "dep:notify",
    "dep:crossbeam-channel",
    "dep:ctrlc",
    "dep:env_logger",
]

[dependencies]
dogma-vdb = { path = ".." }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"

# RAG feature dependencies
dogma-vdb-embed = { path = "../dogma-vdb-embed", optional = true }
dogma-vdb-embed-fastembed = { path = "../dogma-vdb-embed-fastembed", optional = true }
notify = { version = "8", features = ["crossbeam-channel"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }
ctrlc = { version = "3", optional = true }
env_logger = { version = "0.11", optional = true }
