[package]
name = "dogma-vdb-mcp"
version = "0.1.0"
description = "MCP server for dogma-vdb — query .vdb collections from any MCP client."
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[dependencies]
dogma-vdb = { path = ".." }
rmcp = { version = "1", features = ["server", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
