[package]
name = "dogma-vdb-mcp"
version = "0.1.0"
description = "MCP server for dogma-vdb — query .vdb collections from any MCP client."
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[dependencies]
dogma-vdb = { path = ".." }
dogma-vdb-rerank = { path = "../dogma-vdb-rerank" }
rmcp = { version = "1", features = ["server", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Optional: SSE/HTTP transport
axum = { version = "0.8", optional = true }
http-body-util = { version = "0.1", optional = true }

[features]
default = []
sse = ["dep:axum", "dep:http-body-util", "rmcp/transport-streamable-http-server"]
