[package]
name = "dogma-vdb-rerank"
version = "0.1.0"
edition = "2021"
description = "Agnostic local Cross-Encoder reranking for Rust — compatible with dogma-vdb, LanceDB, or any vector store."

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

# ONNX Runtime for Rust — Cross-Encoder inference
# `ureq` feature enables the `ureq` backend. The `download-binaries`
# feature lets ort fetch ONNX models from HuggingFace at runtime.
# Note: `ort-sys 2.0.0-rc.12` (pulled transitively) uses ureq 3.x and
# requires a TLS feature; the workspace root has a ureq 3 dep with
# the `rustls` feature for feature unification.
ort = { version = "=2.0.0-rc.9", features = ["download-binaries", "ndarray", "ureq"] }

# ndarray for tensor construction (re-exported by ort but needed directly)
ndarray = "0.16"

# HuggingFace tokenizers — fast BPE/WordPiece tokenization
tokenizers = "0.15"

# Parallel batch inference
rayon = "1"

# Logging
log = "0.4"
