[package]
name = "dogma-vdb-rerank"
version = "0.1.0"
edition = "2021"
description = "Agnostic local Cross-Encoder reranking for Rust — compatible with dogma-vdb, LanceDB, or any vector store."

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

# ONNX Runtime for Rust — Cross-Encoder inference
#
# NOTE: `download-binaries` and `ureq` are deliberately DISABLED.
# The ort-sys transitive dep (2.0.0-rc.12) pulls ureq 3.x which
# has an unresolvable TLS-feature issue on CI. Models are
# expected to be pre-downloaded by the user, and HTTP fetching
# is not needed for inference-only mode.
ort = { version = "=2.0.0-rc.9", features = ["ndarray"] }

# ndarray for tensor construction (re-exported by ort but needed directly)
ndarray = "0.16"

# HuggingFace tokenizers — fast BPE/WordPiece tokenization
tokenizers = "0.15"

# Parallel batch inference
rayon = "1"

# Logging
log = "0.4"
