[package]
name = "dogma-vdb-rerank"
version = "0.1.0"
edition = "2021"
description = "Agnostic local Cross-Encoder reranking for Rust — compatible with dogma-vdb, LanceDB, or any vector store."

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

# ONNX Runtime for Rust — Cross-Encoder inference
#
# Pinned to exact versions to avoid ort-sys 2.0.0-rc.12 which has
# ureq 3.x as a HARD (non-optional) dependency — that version of
# ureq requires a TLS feature for its build script to compile, and
# the feature unification doesn't propagate to transitive deps.
#
# ort-sys 2.0.0-rc.9 does NOT have ureq as a hard dep, so it works.
# We also disable `download-binaries` and `ureq` features since
# inference-only mode doesn't need HTTP model fetching.
ort = { version = "=2.0.0-rc.9", features = ["ndarray"] }
ort-sys = "=2.0.0-rc.9"

# ndarray for tensor construction (re-exported by ort but needed directly)
ndarray = "0.16"

# HuggingFace tokenizers — fast BPE/WordPiece tokenization
tokenizers = "0.15"

# Parallel batch inference
rayon = "1"

# Logging
log = "0.4"
